--- a/game.libretro.beetle-bsnes/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.beetle-bsnes/resources/language/resource.language.en_gb/strings.po
@@ -21,7 +21,7 @@ msgid "Nintendo - SNES / SFC (Beetle bsnes) v0.9.26"
 msgstr ""
 
 msgctxt "Addon Description"
-msgid "Beetle bSNES is the SNES module of Beetle, a fork of Mednafen. Mednafen&#39;s SNES module itself is a fork of bSNES v0.59."
+msgid "Beetle bSNES is the SNES module of Beetle, a fork of Mednafen. Mednafen's SNES module itself is a fork of bSNES v0.59."
 msgstr ""
 
 msgctxt "Addon Disclaimer"
